2000-01-19  Geoff Keating  <geoffk@cygnus.com>

	* rs6000.c (rs6000_va_arg): Delete some unused variables.

2000-01-19  Geoff Keating  <geoffk@cygnus.com>

	* rs6000.c (rs6000_va_arg): On AIX, padding for small arguments
	goes after the argument.

2000-01-12  Geoff Keating  <geoffk@cygnus.com>

	* rs6000.md: Document 'unspec' values used.
	(epilogue): New expander.
	(movesi_to_cr_one): New expander.
	(movesi_to_cr and following): New pattern.
	(lmw): New pattern.
	(return_internal_si): New pattern.
	(return_internal_di): New pattern.
	(return_and_restore_fpregs_si): New pattern.
	(return_and_restore_fpregs_di): New pattern.
	* rs6000.h: Declare new functions.
	* rs6000.c (rs6000_stack_info): Use current_function_is_leaf
	rather than rs6000_calls_p.
	(rs6000_makes_calls): Delete.
	(lmw_operation): New function.
	(mtcrf_operation): New function.
	(rs6000_emit_epilogue): New function.
	(output_epilog): Call rs6000_emit_epilogue and final if
	!TARGET_SCHED_PROLOG, instead of writing text unconditionally.

2000-01-12  Geoff Keating  <geoffk@cygnus.com>

	* aix43.h (SUBSUBTARGET_SWITCHES): Document switches.
	* aix41.h (SUBSUBTARGET_SWITCHES): Document switches.
	* aix.h (SUBTARGET_SWITCHES): Document switches.
	* rs6000.h: (TARGET_SWITCHES): Don't print options twice.  Make
	sched-prolog and sched-epilog the same.  Document all the
	switches.
	(TARGET_OPTIONS): No longer allow -mdebug-.

2000-01-12  Geoff Keating  <geoffk@cygnus.com>

	* rs6000.h (ASM_FILE_END): Move to aix.h.
	(EXTRA_SECTIONS): Move to aix.h.
	(READONLY_DATA_SECTION): Move to aix.h.
	(EXTRA_SECTION_FUNCTIONS): Move to aix.h.
	(SELECT_SECTION): Move to aix.h.
	(JUMP_TABLES_IN_TEXT_SECTION): Move to aix.h.
	(INT_REGNO_P): Use symbolic name for ARG_POINTER_REGNUM.
	(LINK_REGISTER_REGNUM): New definition.
	(RETURN_ADDR_RTX): Use symbolic name for LINK_REGISTER_REGNUM.
	(SLOW_UNALIGNED_ACCESS): Define in a way suitable for both
	AIX and SVR4.
	* sysv4.h: Delete the code between the inclusion of rs6000.h